--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #6c69a0;
+  --ifm-color-primary-dark: #5f5c92;
+  --ifm-color-primary-darker: #5a578a;
+  --ifm-color-primary-darkest: #4a4872;
+  --ifm-color-primary-light: #7c79aa;
+  --ifm-color-primary-lighter: #8481af;
+  --ifm-color-primary-lightest:#9c9abf;
   --ifm-code-font-size: 95%;
 }
 
