removed embedded code sandbox

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,7 +25,7 @@
 }
 
 .footer {
-   background-color: #3f3d56;
+   background-color: var(--ifm-color-primary-darkest);
 }
 
 .header-icon-link:hover {
