added missing comment

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -185,6 +185,8 @@ html[data-theme='dark'] .admonition-icon svg {
 }
 
 
+/* Table of Contents */
+
 .table-of-contents {
 
   .table-of-contents__link--active {
