--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -42,7 +42,7 @@
 /* Code Block */
 
 .docusaurus-highlight-code-line {
-  background-color: var( --ifm-color-primary-light);
+  background-color: rgba(121, 118, 171, 0.3);
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
