added toast global

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -211,6 +211,7 @@ html[data-theme='dark'] .admonition-icon svg {
   background-color: var(--ifm-background-surface-color);
   border-radius: var(--ifm-alert-border-radius);
   color: var(--ifm-color-black);
+  font-size: 0.9em;
 }
 
 html[data-theme='dark'] .Toastify__toast {
