--- a/src/theme/Layout/styles.module.css
+++ b/src/theme/Layout/styles.module.css
@@ -5,22 +5,6 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-html,
-body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  transition: var(--ifm-transition-fast) ease color;
-}
-
-#__docusaurus {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.main-wrapper {
+.wrapper {
   flex: 1 0 auto;
 }
