--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -10,6 +10,25 @@
   padding: 0 var(--ifm-spacing-horizontal);
 }
 
+.icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 25px;
+
+  cursor: pointer;
+  color: var(--ifm-navbar-link-color);
+}
+
+.iconContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.icon:hover {
+  color: var(--ifm-navbar-link-active-color);
+}
+
 .brandText {
   margin-left: -15px;
   margin-right: 3rem;
@@ -35,14 +54,24 @@
     display: none;
   }
 
-  :global(.navbar__brand) {
-    margin: 0;
+  :global(.navbar-sidebar__brand) {
+    display: flex;
+    align-items: center;
   }
 }
 
 @media (max-width: 997px) {
   .displayOnlyInLargeViewport {
     display: none !important;
+  }
+
+  .siteBarBrand {
+    margin-left: 30px;
+    text-align: center;
+  }
+
+  .icon {
+    margin-top: 10px;
   }
 
   :global(.navbar__link) {
