--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -18,6 +18,7 @@
   --ifm-color-primary-lighter: #8481af;
   --ifm-color-primary-lightest: #9c9abf;
   --ifm-code-font-size: 95%;
+  --ifm-h4-font-size: 1.3rem;
 
 
   /* Admonition */
