--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -8,23 +8,97 @@
 /* You can override the default Infima variables here. */
 :root {
 
-  /* Primary Colors */
+  // ==============================================================================
+  // Primitive Colors
+  // ==============================================================================
 
-  --ifm-color-primary: #6c69a0;
-  --ifm-color-primary-dark: #5f5c92;
-  --ifm-color-primary-darker: #5a578a;
-  --ifm-color-primary-darkest: #4a4872;
-  --ifm-color-primary-light: #7c79aa;
-  --ifm-color-primary-lighter: #8481af;
-  --ifm-color-primary-lightest: #9c9abf;
+  --ifm-color-black: #18191a;
+  --ifm-color-black-light: #202026;
+  --ifm-color-black-lighter: #2a2a32;
+  --ifm-color-white: #ffffff;
+  --ifm-color-white-dark: #e6e6fd;
+  --ifm-color-white-darker: #c5c5e9;
+  --ifm-color-purple-lightest: #9C9ABF;
+  --ifm-color-purple-lighter: #8481AF;
+  --ifm-color-purple-light: #7C79AA;
+  --ifm-color-purple: #6C69A0;
+  --ifm-color-purple-dark: #5F5C92;
+  --ifm-color-purple-darker: #5A578A;
+  --ifm-color-purple-darkest: #4A4872;
+  --ifm-color-orange: #EE8030;
+  --ifm-color-green: #00CCB1;
+  --ifm-color-green-dark: #00B89F;
+  --ifm-color-red: #FF6262;
+  --ifm-color-redDark: #DE5B5B;
+  --ifm-color-yellow: #FEEC4C;
+  --ifm-color-gray-darkest: #262630;
+  --ifm-color-gray-dark: #3c3c4c;
+
+
+  // ==============================================================================
+  // Theme Colors
+  // ==============================================================================
+
+  // Background
+  --ifm-color-background: var(--ifm-color-white);
+  --ifm-color-background-2: var(--ifm-color-white-dark);
+  --ifm-color-background-3: var(--ifm-color-white-darker);
+  --ifm-color-on-background: var(--ifm-color-black);
+  --ifm-color-on-background-2: var(--ifm-color-purple-darker);
+  --ifm-color-on-background-3: var(--ifm-color-purple-dark);
+
+  // Surface
+  --ifm-color-surface: var(--ifm-color-white-dark);
+  --ifm-color-surface-2: var(--ifm-color-white-darker);
+  --ifm-color-on-surface: var(--ifm-color-black);
+  --ifm-color-on-surface-2: var(--ifm-color-purple-darkest);
+  --ifm-color-on-surface-3: var(--ifm-color-purple-darker);
+
+  // Success
+  --ifm-color-success: var(--ifm-color-green-dark);
+  --ifm-color-on-success: var(--ifm-color-white);
+
+  // Error
+  --ifm-color-error: var(--ifm-color-red-dark);
+  --ifm-color-on-error: var(--ifm-color-white);
+
+
+  // ==============================================================================
+  // General Docusaurus
+  // ==============================================================================
+
+  // Primary Colors
+  --ifm-color-primary: var(--ifm-color-purple);
+  --ifm-color-primary-dark: var(--ifm-color-purple-dark);
+  --ifm-color-primary-darker: var(--ifm-color-purple-darker);
+  --ifm-color-primary-darkest: var(--ifm-color-purple-derkest);
+  --ifm-color-primary-light: var(--ifm-color-purple-light);
+  --ifm-color-primary-lighter: var(--ifm-color-purple-lighter);
+  --ifm-color-primary-lightest: var(--ifm-color-purple-lightest);
+
+  // Admonition
+  --ra-admonition-color: rgba(121, 118, 171, 0.5);
+  --ra-admonition-color-dark: #6c69a0;
+
+  --ra-admonition-color-important: rgba(179, 252, 249, 0.5);
+  --ra-admonition-color-important-dark: #2a98b9;
+
+  --ra-admonition-color-success: rgba(193, 255, 170, 0.5);
+  --ra-admonition-color-success-dark: #06a46f;
+
+  --ra-admonition-color-caution: rgba(243, 237, 121, 0.5);
+  --ra-admonition-color-caution-dark: #c4b325;
+
+  --ra-admonition-color-error: rgba(255, 206, 206, 0.5);
+  --ra-admonition-color-error-dark: #d9534f;
+
   --ifm-code-font-size: 95%;
   --ifm-h4-font-size: 1.3rem;
 
-  --ifm-background-color: #ffffff;
-  --ifm-background-color-light: #e6e6fd;
-  --ifm-background-color-lighter: #e0e0ff;
 
-  /* Scrollbar */
+  // ==============================================================================
+  // Scrollbar
+  // ==============================================================================
 
   /* Firefox */
   * {
@@ -51,7 +125,10 @@
     background: var(--ifm-color-primary-dark) !important;
   }
 
-  /* Navbar */
+
+  // ==============================================================================
+  // Navbar
+  // ==============================================================================
 
   --ifm-navbar-background-color: var(--ifm-background-color);
   --ifm-navbar-height: 80px;
@@ -60,27 +137,12 @@
   --ifm-navbar-shadow: 0 1px 0 0 var(--ifm-color-primary-lightest);
   --ifm-dropdown-background-color: var(--ifm-background-color-light);
   --ifm-dropdown-hover-background-color: var(--ifm-background-color-lighter);
-
-  /* Admonition */
-
-  --ra-admonition-color: rgba(121, 118, 171, 0.5);
-  --ra-admonition-color-dark: #6c69a0;
-
-  --ra-admonition-color-important: rgba(179, 252, 249, 0.5);
-  --ra-admonition-color-important-dark: #2a98b9;
-
-  --ra-admonition-color-success: rgba(193, 255, 170, 0.5);
-  --ra-admonition-color-success-dark: #06a46f;
-
-  --ra-admonition-color-caution: rgba(243, 237, 121, 0.5);
-  --ra-admonition-color-caution-dark: #c4b325;
-
-  --ra-admonition-color-error: rgba(255, 206, 206, 0.5);
-  --ra-admonition-color-error-dark: #d9534f;
 }
 
 
-/* Code Block */
+// ==============================================================================
+// Code Block
+// ==============================================================================
 
 .docusaurus-highlight-code-line {
   background-color: rgba(121, 118, 171, 0.3);
@@ -90,7 +152,9 @@
 }
 
 
-/* Admonitions */
+// ==============================================================================
+// Admonitions
+// ==============================================================================
 
 /* style '.admonition:not(.alert)' gets used in production and '.admonition' in develop.. */
 .admonition, .admonition:not(.alert) {
@@ -148,7 +212,9 @@ html[data-theme='dark'] {
 }
 
 
-/* Menu */
+// ==============================================================================
+// Menu
+// ==============================================================================
 
 .menu__list {
 
@@ -167,7 +233,9 @@ html[data-theme='dark'] {
 }
 
 
-/* Table of Contents */
+// ==============================================================================
+// Table of Contents
+// ==============================================================================
 
 .table-of-contents {
   .table-of-contents__link--active {
@@ -186,7 +254,10 @@ html[data-theme='dark'] {
   }
 }
 
-/* Toast */
+
+// ==============================================================================
+// Toastify
+// ==============================================================================
 
 .Toastify__toast {
   background-color: var(--ifm-color-primary);
@@ -203,7 +274,10 @@ html[data-theme='dark'] {
   background-color: var(--ifm-color-primary-light) !important;
 }
 
-/* Searchbar */
+
+// ==============================================================================
+// Searchbar
+// ==============================================================================
 
 .navbar {
   .DocSearch {
@@ -254,8 +328,32 @@ html[data-theme='dark'] {
 
 /* https://codyhouse.co/blog/post/dark-light-switch-css-javascript */
 [data-theme='dark'] {
-  --ifm-background-color: #18191A;
-  --ifm-background-color-light: #202026;
-  --ifm-background-color-lighter: #2a2a32;
+
+  // ==============================================================================
+  // Theme Colors
+  // ==============================================================================
+
+  // Background
+  --ifm-color-background: var(--ifm-color-black);
+  --ifm-color-background-2: var(--ifm-color-black-light);
+  --ifm-color-background-3: var(--ifm-color-black-lighter);
+  --ifm-color-on-background: var(--ifm-color-white);
+  --ifm-color-on-background-2: var(--ifm-color-purple-lighter);
+  --ifm-color-on-background-3: var(--ifm-color-purple-light);
+
+  // Surface
+  --ifm-color-surface: var(--ifm-color-gray-darkest);
+  --ifm-color-surface-2: var(--ifm-color-gray-dark);
+  --ifm-color-on-surface: var(--ifm-color-white);
+  --ifm-color-on-surface-2: var(--ifm-color-purple-lightest);
+  --ifm-color-on-surface-3: var(--ifm-color-purple-lighter);
+
+  // Success
+  --ifm-color-success: var(--ifm-color-green);
+  --ifm-color-on-success: var(--ifm-color-black);
+
+  // Error
+  --ifm-color-error: var(--ifm-color-red);
+  --ifm-color-on-error: var(--ifm-color-black);
 }
 
