optimized font-size

--- a/src/components/buttons/GithubButton/styles.module.css
+++ b/src/components/buttons/GithubButton/styles.module.css
@@ -5,7 +5,7 @@
   border-radius: 3px;
   border: none;
 
-  font-size: 18px;
+  font-size: var(--ifm-font-size-18);
   font-weight: bold;
 
   cursor: pointer;
