--- a/src/components/other/SectionScroller/styles.module.css
+++ b/src/components/other/SectionScroller/styles.module.css
@@ -1,65 +1,75 @@
 .SectionContainer {
-    display: flex;
-    width: 100%;
-    max-width: var(--ifm-container-width);
-    padding: 5rem 3em;
-    border-radius: 1rem;
-    font-size: var(--ifm-font-size-18);
-    background: var(--ifm-color-surface);
+  display: flex;
+  width: 100%;
+  max-width: var(--ifm-container-width);
+  padding: 5rem 3em;
+  border-radius: 1rem;
+  font-size: var(--ifm-font-size-18);
+  background-color: var(--ifm-color-surface);
 }
 
 .SectionInnerContainer {
-    display: flex;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
 .SectionLeftContainer {
-    position: relative;
-    max-height: 355px;
-    overflow: hidden;
-    flex: 1 1 515px;
+  position: relative;
+  max-height: 355px;
+  overflow: hidden;
+  flex: 1;
+  -webkit-mask-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0)
+    ),
+    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  -webkit-mask-size: 100% 50%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: top, bottom;
 }
 
 .SectionLeftContainer::before {
-    position: absolute;
-    content: " ";
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 108px;
-    background: linear-gradient(
-            var(--ifm-color-surface),
-            rgba(var(--ifm-color-surface-2), 0)
-    );
-    z-index: 1;
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 108px;
+  background: linear-gradient(
+    var(--ifm-color-surface),
+    rgba(var(--ifm-color-surface-2), 0)
+  );
+  z-index: 1;
 }
 
 .SectionLeftContainer::after {
-    position: absolute;
-    content: " ";
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 108px;
-    background: linear-gradient(
-            var(--ifm-color-surface),
-            rgba(var(--ifm-color-surface-2), 0)
-    );
+  position: absolute;
+  content: " ";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 108px;
+  background: linear-gradient(
+    var(--ifm-color-surface),
+    rgba(var(--ifm-color-surface-2), 0)
+  );
 }
 
 .SectionLeftContainer :global(.prism-code) {
-    width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
 .SectionOffset {
-    position: relative;
-    transform: translateZ(0);
-    transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  position: relative;
+  transform: translateZ(0);
+  transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .SectionRightContainer {
-    display: flex;
-    padding-left: 0.5rem;
-    flex-direction: column;
+  display: flex;
+  padding-left: 0.5rem;
+  flex-direction: column;
 }
