--- a/src/components/other/SectionScroller/styles.module.css
+++ b/src/components/other/SectionScroller/styles.module.css
@@ -9,67 +9,75 @@
 }
 
 .SectionInnerContainer {
-  display: flex;
-  align-items: center;
-  width: 100%;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    width: 100%;
 }
 
 .SectionLeftContainer {
-  position: relative;
-  max-height: 355px;
-  overflow: hidden;
-  flex: 1;
-  -webkit-mask-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0)
-    ),
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  -webkit-mask-size: 100% 50%;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: top, bottom;
+    position: relative;
+    overflow: hidden;
+    max-height: 355px;
+    flex: 1.5;
 }
 
 .SectionLeftContainer::before {
-  position: absolute;
-  content: " ";
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 108px;
-  background: linear-gradient(
-    var(--ifm-color-surface),
-    rgba(var(--ifm-color-surface-2), 0)
-  );
-  z-index: 1;
+    display: block;
+    content: " "; /* https://stackoverflow.com/questions/35180361/css-before-and-after-not-working */
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 108px;
+    width: 100%;
+    background: linear-gradient(
+            var(--ifm-color-surface),
+            transparent
+    );
+    z-index: 1;
 }
 
 .SectionLeftContainer::after {
-  position: absolute;
-  content: " ";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 108px;
-  background: linear-gradient(
-    var(--ifm-color-surface),
-    rgba(var(--ifm-color-surface-2), 0)
-  );
-}
-
-.SectionLeftContainer :global(.prism-code) {
-  width: 100%;
-  overflow: hidden;
+    display: block;
+    content: " "; /* https://stackoverflow.com/questions/35180361/css-before-and-after-not-working */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 108px;
+    width: 100%;
+    background: linear-gradient(
+            transparent,
+            var(--ifm-color-surface)
+    );
+    z-index: 1;
 }
 
 .SectionOffset {
   position: relative;
-  transform: translateZ(0);
-  transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    transform: translateZ(0);
+    transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .SectionRightContainer {
-  display: flex;
-  padding-left: 0.5rem;
-  flex-direction: column;
+    display: flex;
+    flex: 1;
+    padding-left: 0.5rem;
+    flex-direction: column;
+}
+
+@media (max-width: 1113px) {
+    .SectionContainer {
+        --active-font-size: var(--ifm-font-size-18);
+        padding: 4rem 1.75em;
+    }
+
+    .SectionInnerContainer {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .SectionLeftContainer {
+        flex-grow: 0;
+        flex-shrink: 1;
+    }
 }
