--- a/src/components/other/SectionScroller/components/SectionRightItem/styles.module.css
+++ b/src/components/other/SectionScroller/components/SectionRightItem/styles.module.css
@@ -23,11 +23,11 @@
   height: auto;
   opacity: 1;
   margin-top: 5px;
-  color: var(--ifm-color-on-primary)
+  color: var(--ifm-color-on-primary);
 }
 
 .Container_Active .Header {
-  color: var(--ifm-color-on-primary)
+  color: var(--ifm-color-on-primary);
 }
 
 .Description {
@@ -48,7 +48,7 @@
   align-items: center;
   font-size: var(--ifm-font-size-18);
   font-weight: bold;
-  color: var(--ifm-color-on-surface)
+  color: var(--ifm-color-on-surface);
 }
 
 @media (max-width: 1113px) {
