--- a/src/components/other/SectionScroller/styles.module.css
+++ b/src/components/other/SectionScroller/styles.module.css
@@ -11,8 +11,6 @@
   overflow: hidden;
   font-size: var(--ifm-font-size-18);
   background-color: var(--ifm-color-surface);
-
-  background-color: #00a4db;
 }
 
 .SectionInnerContainer {
@@ -20,8 +18,6 @@
   flex: 1;
   align-items: center;
   width: 100%;
-
-  background-color: #7f8497;
 }
 
 .SectionLeftContainer {
@@ -30,8 +26,6 @@
   position: relative;
   overflow: hidden;
   max-height: 400px;
-
-  background-color: green;
 }
 
 .SectionLeftContainer::before {
@@ -61,19 +55,16 @@
 .SectionOffset {
   position: relative;
   height: 100%;
+  width: 100%;
   transform: translateZ(0);
   transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
-
-  background-color: purple;
 }
 
 .SectionRightContainer {
   display: flex;
   flex: 1;
-  margin-left: 2rem;
+  margin-left: 5rem;
   flex-direction: column;
-
-  background-color: red;
 }
 
 .ChevronContainer {
@@ -91,7 +82,7 @@
   color: var(--ifm-color-on-surface-2);
 }
 
-@media (max-width: 1113px) {
+@media (max-width: 996px) {
   .SectionContainer {
     padding: 4rem 1.75em;
   }
@@ -101,18 +92,24 @@
     align-items: center;
   }
 
+  .SectionRightContainer {
+    margin-left: 2rem;
+  }
+
   .SectionLeftContainer {
-    flex: 3
+    flex: 3;
+    display: block;
   }
 }
 
-@media (max-width: 622px) {
+@media (max-width: 768px) {
   .SectionContainer {
     padding: 0;
   }
 
   .SectionInnerContainer {
     flex-direction: column;
+    display: block;
   }
 
   .SectionRightContainer {
@@ -121,6 +118,5 @@
 
   .SectionLeftContainer {
     max-height: 288px;
-    flex: 0;
   }
 }
