--- a/src/pages/LandingPage/components/StraightforwardView/styles.module.css
+++ b/src/pages/LandingPage/components/StraightforwardView/styles.module.css
@@ -1,10 +1,17 @@
 .Container {
+  background-color: var(--ifm-color-background-2);
+  transform: skewY(-2deg);
+  padding: 8rem 0;
+}
+
+.Content {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 5rem 0;
-  background-color: var(--ifm-color-background-2);
+  max-width: var(--ifm-container-width);
+  margin: 0 auto;
+  transform: skewY(2deg);
 }
 
 .HeaderContainer {
