--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -17,6 +17,21 @@
   cursor: pointer;
 }
 
+.ProgressbarContainer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--ifm-color-on-background);
+}
+
+.Progressbar {
+  height: 1px;
+  background-color: var(--ifm-color-on-background-2);
+  width: 0;
+}
+
 :global(.navbar__link),
 :global(.dropdown__link) {
   font-size: var(--ifm-font-size-base);
