--- a/src/components/other/MouseScroller/styles.module.css
+++ b/src/components/other/MouseScroller/styles.module.css
@@ -1,76 +1,59 @@
 .MouseContainer {
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-    bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: 40px;
 }
 
 .Mouse {
-    width: 25px;
-    height: 45px;
-    border: 2px solid var(--ifm-color-on-background-2);
-    border-radius: 15px;
-    position: relative;
-    text-align: center;
+  width: 25px;
+  height: 45px;
+  border: 2px solid var(--ifm-color-on-background-2);
+  border-radius: 15px;
+  position: relative;
+  text-align: center;
 }
 
 .MouseWheel {
-    position: relative;
-    display: block;
-    height: 6px;
-    margin: 2px auto 0;
-    width: 4px;
-    background-color: var(--ifm-color-on-background-2);
-    border-radius: 50%;
-    -webkit-animation: 1.6s ease infinite wheel-up-down;
-    -moz-animation: 1.6s ease infinite wheel-up-down;
-    animation: 1.6s ease infinite wheel-up-down;
+  position: relative;
+  display: block;
+  height: 6px;
+  margin: 2px auto 0;
+  width: 4px;
+  background-color: var(--ifm-color-on-background-2);
+  border-radius: 50%;
+  -webkit-animation: wheel-up-down ease 1.6s infinite;
+  animation: wheel-up-down ease 1.6s infinite;
 }
 
 @-webkit-keyframes wheel-up-down {
-    0% {
-        margin-top: 2px;
-        opacity: 0;
-    }
+  0% {
+    margin-top: 2px;
+    opacity: 0;
+  }
 
-    30% {
-        opacity: 1;
-    }
+  30% {
+    opacity: 1;
+  }
 
-    100% {
-        margin-top: 20px;
-        opacity: 0;
-    }
-}
-
-@-moz-keyframes wheel-up-down {
-    0% {
-        margin-top: 2px;
-        opacity: 0;
-    }
-
-    30% {
-        opacity: 1;
-    }
-
-    100% {
-        margin-top: 20px;
-        opacity: 0;
-    }
+  100% {
+    margin-top: 20px;
+    opacity: 0;
+  }
 }
 
 @keyframes wheel-up-down {
-    0% {
-        margin-top: 2px;
-        opacity: 0;
-    }
+  0% {
+    margin-top: 2px;
+    opacity: 0;
+  }
 
-    30% {
-        opacity: 1;
-    }
+  30% {
+    opacity: 1;
+  }
 
-    100% {
-        margin-top: 20px;
-        opacity: 0;
-    }
+  100% {
+    margin-top: 20px;
+    opacity: 0;
+  }
 }
