--- a/src/components/other/SectionScroller/components/SectionLeftItem/styles.module.css
+++ b/src/components/other/SectionScroller/components/SectionLeftItem/styles.module.css
@@ -1,6 +1,7 @@
 .Container {
   width: 100%;
   position: relative;
+  margin-left: -1px;
   font-size: var(--ifm-font-size-16);
   transform: translateZ(0);
   transition: top 100ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
